--- a/04_lsq_qat.ipynb
+++ b/04_lsq_qat.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "id": "f3babd8b",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "id": "14f09914",
    "metadata": {},
    "outputs": [
@@ -29,7 +29,7 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "a24320ec",
    "metadata": {},
    "outputs": [],
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 28,
    "id": "b3a20aaf",
    "metadata": {},
    "outputs": [],
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 29,
    "id": "55007e71",
    "metadata": {},
    "outputs": [],
@@ -149,25 +149,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 30,
    "id": "0a9ac62f",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'Tensor' object has no attribute 'fill'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[19], line 10\u001b[0m\n\u001b[1;32m      8\u001b[0m x, y \u001b[38;5;241m=\u001b[39m x\u001b[38;5;241m.\u001b[39mto(device), y\u001b[38;5;241m.\u001b[39mto(device)\n\u001b[1;32m      9\u001b[0m optimizer\u001b[38;5;241m.\u001b[39mzero_grad()\n\u001b[0;32m---> 10\u001b[0m loss \u001b[38;5;241m=\u001b[39m criterion(\u001b[43mqat_model\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[43m)\u001b[49m, y)\n\u001b[1;32m     11\u001b[0m loss\u001b[38;5;241m.\u001b[39mbackward()\n\u001b[1;32m     12\u001b[0m optimizer\u001b[38;5;241m.\u001b[39mstep()\n",
-      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/torch/nn/modules/module.py:1775\u001b[0m, in \u001b[0;36mModule._wrapped_call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1773\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_compiled_call_impl(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)  \u001b[38;5;66;03m# type: ignore[misc]\u001b[39;00m\n\u001b[1;32m   1774\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m-> 1775\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_call_impl\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/torch/nn/modules/module.py:1786\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1781\u001b[0m \u001b[38;5;66;03m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[1;32m   1782\u001b[0m \u001b[38;5;66;03m# this function, and just call forward.\u001b[39;00m\n\u001b[1;32m   1783\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m (\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_backward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_forward_pre_hooks\n\u001b[1;32m   1784\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m _global_backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_backward_hooks\n\u001b[1;32m   1785\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m _global_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[0;32m-> 1786\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mforward_call\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1788\u001b[0m result \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m   1789\u001b[0m called_always_called_hooks \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mset\u001b[39m()\n",
-      "Cell \u001b[0;32mIn[16], line 47\u001b[0m, in \u001b[0;36mLSQQATModel.forward\u001b[0;34m(self, x)\u001b[0m\n\u001b[1;32m     45\u001b[0m x \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbase\u001b[38;5;241m.\u001b[39mbn1(x)\n\u001b[1;32m     46\u001b[0m x \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbase\u001b[38;5;241m.\u001b[39mrelu(x)\n\u001b[0;32m---> 47\u001b[0m x \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfq_conv1\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     49\u001b[0m x \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbase\u001b[38;5;241m.\u001b[39mlayer1(x)\n\u001b[1;32m     50\u001b[0m x \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfq_layer1(x)\n",
-      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/torch/nn/modules/module.py:1775\u001b[0m, in \u001b[0;36mModule._wrapped_call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1773\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_compiled_call_impl(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)  \u001b[38;5;66;03m# type: ignore[misc]\u001b[39;00m\n\u001b[1;32m   1774\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m-> 1775\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_call_impl\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/torch/nn/modules/module.py:1786\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1781\u001b[0m \u001b[38;5;66;03m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[1;32m   1782\u001b[0m \u001b[38;5;66;03m# this function, and just call forward.\u001b[39;00m\n\u001b[1;32m   1783\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m (\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_backward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_forward_pre_hooks\n\u001b[1;32m   1784\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m _global_backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_backward_hooks\n\u001b[1;32m   1785\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m _global_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[0;32m-> 1786\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mforward_call\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1788\u001b[0m result \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m   1789\u001b[0m called_always_called_hooks \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mset\u001b[39m()\n",
-      "Cell \u001b[0;32mIn[16], line 25\u001b[0m, in \u001b[0;36mLSQFakeQuant.forward\u001b[0;34m(self, x)\u001b[0m\n\u001b[1;32m     23\u001b[0m         init_scale \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m2\u001b[39m\u001b[38;5;241m*\u001b[39mmean_abs\u001b[38;5;241m/\u001b[39m (Qp \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39m \u001b[38;5;241m0.5\u001b[39m)\n\u001b[1;32m     24\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mscale\u001b[38;5;241m.\u001b[39mdata\u001b[38;5;241m.\u001b[39mcopy_(init_scale)\n\u001b[0;32m---> 25\u001b[0m         \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43minitialized\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfill\u001b[49m(\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m     27\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m STEQuant\u001b[38;5;241m.\u001b[39mapply(x, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mscale)\n\u001b[1;32m     28\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m x\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'Tensor' object has no attribute 'fill'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1 Acc: 29.23%\n",
+      "Epoch 2 Acc: 47.53%\n",
+      "Epoch 3 Acc: 68.19%\n",
+      "Epoch 4 Acc: 79.40%\n",
+      "Epoch 5 Acc: 87.80%\n",
+      "Epoch 6 Acc: 91.35%\n",
+      "Epoch 7 Acc: 93.97%\n",
+      "Epoch 8 Acc: 95.18%\n",
+      "Epoch 9 Acc: 95.98%\n",
+      "Epoch 10 Acc: 96.35%\n",
+      "Epoch 11 Acc: 96.88%\n",
+      "Epoch 12 Acc: 97.22%\n",
+      "Epoch 13 Acc: 97.39%\n",
+      "Epoch 14 Acc: 97.63%\n",
+      "Epoch 15 Acc: 97.81%\n",
+      "Epoch 16 Acc: 97.97%\n",
+      "Epoch 17 Acc: 98.07%\n",
+      "Epoch 18 Acc: 98.15%\n",
+      "Epoch 19 Acc: 98.29%\n",
+      "Epoch 20 Acc: 98.32%\n",
+      "Epoch 21 Acc: 98.42%\n",
+      "Epoch 22 Acc: 98.49%\n",
+      "Epoch 23 Acc: 98.52%\n",
+      "Epoch 24 Acc: 98.60%\n",
+      "Epoch 25 Acc: 98.69%\n",
+      "Epoch 26 Acc: 98.70%\n",
+      "Epoch 27 Acc: 98.81%\n",
+      "Epoch 28 Acc: 98.83%\n",
+      "Epoch 29 Acc: 98.82%\n",
+      "Epoch 30 Acc: 98.87%\n",
+      "Epoch 31 Acc: 98.92%\n",
+      "Epoch 32 Acc: 98.91%\n",
+      "Epoch 33 Acc: 98.99%\n",
+      "Epoch 34 Acc: 98.94%\n",
+      "Epoch 35 Acc: 99.03%\n",
+      "Epoch 36 Acc: 99.12%\n",
+      "Epoch 37 Acc: 99.10%\n",
+      "Epoch 38 Acc: 99.10%\n",
+      "Epoch 39 Acc: 99.16%\n",
+      "Epoch 40 Acc: 99.15%\n",
+      "Epoch 41 Acc: 99.17%\n",
+      "Epoch 42 Acc: 99.18%\n",
+      "Epoch 43 Acc: 99.16%\n",
+      "Epoch 44 Acc: 99.19%\n",
+      "Epoch 45 Acc: 99.18%\n",
+      "Epoch 46 Acc: 99.22%\n",
+      "Epoch 47 Acc: 99.19%\n",
+      "Epoch 48 Acc: 99.21%\n",
+      "Epoch 49 Acc: 99.27%\n",
+      "Epoch 50 Acc: 99.21%\n",
+      "Epoch 51 Acc: 99.24%\n",
+      "Epoch 52 Acc: 99.22%\n",
+      "Epoch 53 Acc: 99.23%\n",
+      "Epoch 54 Acc: 99.27%\n",
+      "Epoch 55 Acc: 99.23%\n",
+      "Epoch 56 Acc: 99.27%\n",
+      "Epoch 57 Acc: 99.30%\n",
+      "Epoch 58 Acc: 99.28%\n",
+      "Epoch 59 Acc: 99.26%\n",
+      "Epoch 60 Acc: 99.30%\n",
+      "Epoch 61 Acc: 99.27%\n",
+      "Epoch 62 Acc: 99.28%\n",
+      "Epoch 63 Acc: 99.28%\n",
+      "Epoch 64 Acc: 99.29%\n",
+      "Epoch 65 Acc: 99.23%\n",
+      "Epoch 66 Acc: 99.27%\n",
+      "Epoch 67 Acc: 99.29%\n",
+      "Epoch 68 Acc: 99.26%\n",
+      "Epoch 69 Acc: 99.28%\n",
+      "Epoch 70 Acc: 99.26%\n",
+      "Epoch 71 Acc: 99.31%\n",
+      "Epoch 72 Acc: 99.26%\n",
+      "Epoch 73 Acc: 99.25%\n",
+      "Epoch 74 Acc: 99.29%\n",
+      "Epoch 75 Acc: 99.30%\n",
+      "Epoch 76 Acc: 99.26%\n",
+      "Epoch 77 Acc: 99.30%\n",
+      "Epoch 78 Acc: 99.28%\n",
+      "Epoch 79 Acc: 99.32%\n",
+      "Epoch 80 Acc: 99.31%\n",
+      "Epoch 81 Acc: 99.29%\n",
+      "Epoch 82 Acc: 99.35%\n",
+      "Epoch 83 Acc: 99.31%\n",
+      "Epoch 84 Acc: 99.32%\n",
+      "Epoch 85 Acc: 99.27%\n",
+      "Epoch 86 Acc: 99.30%\n",
+      "Epoch 87 Acc: 99.30%\n",
+      "Epoch 88 Acc: 99.31%\n",
+      "Epoch 89 Acc: 99.25%\n",
+      "Epoch 90 Acc: 99.28%\n"
      ]
     }
    ],
@@ -175,7 +254,7 @@
     "# Optimizer\n",
     "optimizer = optim.Adam(list(qat_model.parameters()) + list(weight_scale_params.values()), lr = 1e-4)\n",
     "criterion = nn.CrossEntropyLoss()\n",
-    "epochs = 30\n",
+    "epochs = 90\n",
     "for epoch in range(epochs):\n",
     "    qat_model.train()\n",
     "    for x, y in train_loader:\n",
